--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.springframework.boot:spring-boot-devtools")
+    compile("org.apache.commons:commons-lang3:3.0")
 
     testCompile("junit:junit")
     testCompile("com.h2database:h2:1.4.196")
